<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/layoutBG">


        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="17.14dp"
            android:layout_marginRight="17.14dp">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25.3dp"
                android:fontFamily="@font/malgunfont"
                android:includeFontPadding="false"
                android:text="@string/register_form_titleText"
                android:textColor="#1e1e1e"
                android:textSize="12sp"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="41.7dp"
                android:layout_marginTop="6dp"
                android:background="#ffffff"
                android:fontFamily="@font/malgunfont"
                android:hint="@string/register_form_emailHintText"
                android:includeFontPadding="false"
                android:inputType="textEmailAddress"
                android:paddingLeft="10.50dp"
                android:textColorHint="#afafaf"
                android:textSize="12sp"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="41.7dp"
                android:layout_marginTop="3.71dp"
                android:background="#ffffff"
                android:fontFamily="@font/malgunfont"
                android:hint="@string/register_form_PWHintText"
                android:includeFontPadding="false"
                android:inputType="textPassword"
                android:paddingLeft="10.50dp"
                android:textColorHint="#afafaf"
                android:textSize="12sp"
                app:layout_constraintTop_toBottomOf="@+id/etEmail" />

            <EditText
                android:id="@+id/etPasswordCheck"
                android:layout_width="match_parent"
                android:layout_height="41.7dp"
                android:layout_marginTop="3.71dp"
                android:background="#ffffff"
                android:fontFamily="@font/malgunfont"
                android:hint="@string/register_form_PWCheckHintText"
                android:includeFontPadding="false"
                android:inputType="textPassword"
                android:paddingLeft="10.50dp"
                android:textColorHint="#afafaf"
                android:textSize="12sp"
                app:layout_constraintTop_toBottomOf="@+id/etPassword" />

            <EditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="41.7dp"
                android:layout_marginTop="3.71dp"
                android:background="#ffffff"
                android:fontFamily="@font/malgunfont"
                android:hint="@string/register_form_nameHintText"
                android:includeFontPadding="false"
                android:inputType="text"
                android:maxLength="4"
                android:paddingLeft="10.50dp"
                android:textColorHint="#afafaf"
                android:textSize="12sp"
                app:layout_constraintTop_toBottomOf="@+id/etPasswordCheck" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="41.7dp"
                android:layout_marginTop="3.71dp"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/etName">


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/etBirth"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginRight="10dp"
                        android:layout_weight="1"
                        android:background="#ffffff"
                        android:fontFamily="@font/malgunfont"
                        android:hint="@string/register_form_RRHintText"
                        android:includeFontPadding="false"
                        android:inputType="number"
                        android:maxLength="6"
                        android:paddingLeft="10.50dp"
                        android:textColorHint="#afafaf"
                        android:textSize="12sp" />

                    <View
                        android:id="@+id/view"
                        android:layout_width="7.25dp"
                        android:layout_height="3dp"
                        android:layout_gravity="center"
                        android:background="#cdcdcd" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/etFirstRN"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="2"
                        android:background="#ffffff"
                        android:fontFamily="@font/malgunfont"
                        android:gravity="center"
                        android:hint="@string/register_form_RRbackHintText"
                        android:includeFontPadding="false"
                        android:inputType="number"
                        android:maxLength="1"
                        android:textColorHint="#afafaf"
                        android:textSize="12sp" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="8dp"
                        android:layout_weight="8"
                        android:includeFontPadding="false"
                        android:fontFamily="@font/malgunfont"
                        android:text="@string/register_form_RRHideText"
                        android:letterSpacing="0.2"
                        android:textColor="#605f5f"
                        android:textSize="22sp" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout1"
                android:layout_width="match_parent"
                android:layout_height="41.7dp"
                android:layout_marginTop="48dp"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout">

                <EditText
                    android:id="@+id/etPhone"
                    android:layout_width="0dp"
                    android:layout_height="41.7dp"
                    android:layout_weight="7"
                    android:background="#ffffff"
                    android:fontFamily="@font/malgunfont"
                    android:hint="@string/register_form_phoneHintText"
                    android:includeFontPadding="false"
                    android:inputType="number"
                    android:maxLength="11"
                    android:paddingLeft="10.50dp"
                    android:textColorHint="#afafaf"
                    android:textSize="12sp" />

                <Button
                    android:id="@+id/ibAuthNumber"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="6dp"
                    android:layout_weight="3"
                    android:background="@color/buttonSelect"
                    android:textColor="#ffffff"
                    android:text="인증번호 요청"
                    android:textStyle="bold"
                    android:textSize="13dp"
                    android:fontFamily="@font/malgunfont"
                    android:includeFontPadding="false" />
            </LinearLayout>

            <EditText
                android:id="@+id/etCN"
                android:layout_width="match_parent"
                android:layout_height="41.7dp"
                android:layout_marginTop="3.71dp"
                android:background="#ffffff"
                android:fontFamily="@font/malgunfont"
                android:hint="@string/register_form_CNHintText"
                android:includeFontPadding="false"
                android:inputType="number"
                android:maxLength="6"
                android:paddingLeft="10.50dp"
                android:textColorHint="#afafaf"
                android:textSize="12sp"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout1" />


            <Button
                android:id="@+id/btNext"
                android:background="@color/buttonDefault"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16.3dp"
                android:text="다음"
                android:textStyle="bold"
                android:fontFamily="@font/malgunfont"
                android:includeFontPadding="false"
                android:textSize="17dp"
                android:textColor="@color/textDefault"
                app:layout_constraintBottom_toBottomOf="parent" />

        </android.support.constraint.ConstraintLayout>
    </android.support.constraint.ConstraintLayout>
</layout>